--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
       {
         "command": "enview.openPreview",
         "title": "Open Environment File Preview",
-        "icon": "$(preview)"
+        "icon": "$(open-preview)"
       }
     ],
     "languages": [
