--- a/package.json
+++ b/package.json
@@ -74,11 +74,15 @@
     "compile": "webpack",
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
+    "build-vsix": "npx @vscode/vsce package --out enview.vsix",
+    "install-local": "code --install-extension enview.vsix --force",
+    "dev": "npm run compile && npm run build-vsix && npm run install-local",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "lint": "eslint src",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "publish": "npx @vscode/vsce publish"
   },
   "devDependencies": {
     "@types/vscode": "^1.101.0",
