--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,7 +28,7 @@ jobs:
       run: npm run lint
       
     - name: Run tests
-      run: npm test
+      run: npm run test:ci
       
     - name: Build extension
       run: npm run compile
