--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.1",
   "license": "MIT",
   "publisher": "cainenielsen",
+  "icon": "assets/icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/cainenielsen/enview.git"
