--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Application Settings
-NODE_ENV: production
+NODE_ENV: "production" # this is an inline comment
 
 # multi-line comment
 # this is a comment
